--- a/.gitignore
+++ b/.gitignore
@@ -33,4 +33,4 @@ build/
 .vscode/
 
 ### Generated css by libsass-maven-plugin ###
-/sfg-pet-clinic-web/src/main/resources/static/resources/css/*.css
+**/sfg-pet-clinic-web/src/main/resources/static/resources/css/*.css
