set version of minimatch as property

--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,7 @@
         <libsass.version>0.3.3</libsass.version>
         <webjars-bootstrap.version>5.3.3</webjars-bootstrap.version>
         <webjars-font-awesome.version>4.7.0</webjars-font-awesome.version>
+        <webjars-npm-minimatch.version>9.0.5</webjars-npm-minimatch.version>
         
         <!-- Sonar -->
         <sonar-maven-plugin.version>5.0.0.4389</sonar-maven-plugin.version>
