--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,6 +39,13 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Use Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          registry-url: 'https://npm.pkg.github.com'
+          scope: '@dboeckli'
+
       - name: Check version
         run: |
           MAVEN_VERSION=$( mvn help:evaluate -Dexpression=project.version -q -DforceStdout )
@@ -63,6 +70,13 @@ jobs:
           token: ${{ secrets.RELEASE_TOKEN }} 
           fetch-depth: 0
 
+      - name: Use Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          registry-url: 'https://npm.pkg.github.com'
+          scope: '@dboeckli'
+
       - name: Set up java 21
         uses: actions/setup-java@v4
         with:
@@ -70,7 +84,10 @@ jobs:
           distribution: 'temurin'
           cache: 'maven'
           server-id: github # Value of the distributionManagement/repository/id field of the pom.xml.
-          settings-path: ${{ github.workspace }} # location for the settings.xml file  
+          settings-path: ${{ github.workspace }} # location for the settings.xml file
+
+      - name: Create k8s Kind Cluster
+        uses: helm/kind-action@v1.12.0
 
       - name: View settings.xml
         run: | 
