--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -392,7 +392,9 @@ jobs:
 
     steps:
       - name: Trigger Deployment
-        if: success()  # This ensures the step only runs if all previous steps were successful
+        # TODO: ENABLE ME
+        #if: success()
+        if: false
         env:
           GH_TOKEN: ${{ secrets.TRIGGER_WORKFLOW_TOKEN }}
           BRANCH_MVN_VERSION: ${{needs.setup.outputs.BRANCH_MVN_VERSION}}
