fixup! fix dependabot #2

--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -250,7 +250,7 @@ jobs:
           echo "### helm chart version is: $HELM_CHART_VERSION"
           echo "HELM_CHART_VERSION=$HELM_CHART_VERSION" >> $GITHUB_OUTPUT
           
-          YAML_FILE="sfg-pet-clinic-web/target/helm-templated/$ARTIFACT_ID/templates/deployment.yaml"
+          YAML_FILE="sfg-pet-clinic-web/target/helm-templated/sfg-pet-clinic-web/templates/deployment.yaml"
           if [ -f "$YAML_FILE" ]; then
             NAMESPACE=$(grep '^\s*namespace:' "$YAML_FILE" | awk '{print $2}' | tr -d '"')
             if [ -z "$NAMESPACE" ]; then
@@ -399,7 +399,7 @@ jobs:
           echo "NAMESPACE: $NAMESPACE"
           
           gh workflow run deploy-and-test-cluster.yml -R ${{ github.repository }} -r ${{ github.ref }} \
-          -f "application-name=$ARTIFACT_ID" \
+          -f "application-name=sfg-pet-clinic-web" \
           -f "version=$BRANCH_MVN_VERSION" \
           -f "helm-chart-version=$HELM_CHART_VERSION" \
           -f "namespace=$NAMESPACE" \
